<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.agregar_usuario.AgregarusuarioFragment">


    <TextView
        android:id="@+id/text_agregarusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <EditText
        android:id="@+id/txtContraseniaRegistroU"
        android:layout_width="246dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:hint="@string/contrasenia_registro_usuario"
        android:inputType=""
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="@+id/txtcorreo_registro_usuario"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtcorreo_registro_usuario"
        app:layout_constraintTop_toBottomOf="@+id/txtcorreo_registro_usuario" />

    <EditText
        android:id="@+id/txtOtraContraseniaRegU"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:hint="@string/otra_vez_la_contraseia_registro_usuario"
        android:inputType=""
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="@+id/txtContraseniaRegistroU"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtContraseniaRegistroU"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseniaRegistroU" />

    <Button
        android:id="@+id/btnagregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/agregar_usuario_registro_usuario"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupRol"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="@+id/radioGroupRol"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupRol" />

    <EditText
        android:id="@+id/txtnumero_registro_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/numero_celular_registro_usuario"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="@+id/txtnombre_registro_usuario"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="@+id/txtnombre_registro_usuario"
        app:layout_constraintTop_toBottomOf="@+id/txtnombre_registro_usuario" />

    <EditText
        android:id="@+id/txtnombre_registro_usuario"
        android:layout_width="192dp"
        android:layout_height="47dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:hint="@string/nombre_usuario_registro_usuario"
        android:inputType=""
        android:maxLength="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_agregarusuario" />

    <EditText
        android:id="@+id/txtcorreo_registro_usuario"
        android:layout_width="261dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/correo_electronico_registro_usuario"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtnumero_registro_usuario"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/txtnumero_registro_usuario"
        app:layout_constraintTop_toBottomOf="@+id/txtnumero_registro_usuario" />

    <RadioGroup
        android:id="@+id/radioGroupRol"
        android:layout_width="195dp"
        android:layout_height="92dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/txtOtraContraseniaRegU"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/txtOtraContraseniaRegU"
        app:layout_constraintTop_toBottomOf="@+id/txtOtraContraseniaRegU">

        <RadioButton
            android:id="@+id/rbAdministradorRegU"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/administrador_registro_usuario" />

        <RadioButton
            android:id="@+id/rbVendedorRegiU"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/vendedor__registro_usuario" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>